tests/baselines/reference/nodeModulesImportAssertions(module=node20).errors.txt
index.ts(1,35): error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
otherc.cts(1,35): error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.


==== index.ts (1 errors) ====
    import json from "./package.json" assert { type: "json" };
                                      ~~~~~~
!!! error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
==== otherc.cts (1 errors) ====
    import json from "./package.json" assert { type: "json" }; // should error, cjs mode imports don't support assertions
                                      ~~~~~~
!!! error TS2880: Import assertions have been replaced by import attributes. Use 'with' instead of 'assert'.
    const json2 = import("./package.json", { assert: { type: "json" } }); // should be fine
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "private": true,
        "type": "module"
    }